Second round of MQs, testing a percentage-based header height, re-added 'jump' fix

--- a/main.css
+++ b/main.css
@@ -73,14 +73,14 @@ body {
 }
 html,
 body,
-#wrap {
+#wrap,
+header {
 	height: 100%;
 }
 body {
 	font-family: 'Raleway', Helvetica, Arial, sans-serif;
 	font-weight: 500;
 	color: #111;
-	background: #fff;
 	text-transform: uppercase;
 	text-align: center;
 	width: 100%;
@@ -96,16 +96,13 @@ a {
 }
 /* Section Styles
 =============== */
-header,
-#services ul,
-#skills ul {
+header {
 	text-align: left;
 }
 
 header h1 {
-	/*font-family: 'FARRAY', 'Raleway', Helvetica, Arial, sans-serif; */
-	font-size: 2.125em; /* Was 2.25em */
-	padding-top: 100px;
+	font-size: 2.25em; 
+	padding-top: 120px;
 	width: 75%;
 	margin: 0 auto;
 	line-height: 1;
@@ -116,12 +113,12 @@ header h1 {
 header h2 {
 	font-size: 1.25em;
 	width: 75%;
-	margin: 35px auto 0 auto;
+	margin: 30px auto 0 auto;
 }
 nav ul {
 	width: 75%;
 	margin: 30px auto 0 auto;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 }
 nav ul li {
 	margin-top: 10px;
@@ -172,10 +169,6 @@ p {
 	font-weight: 400;
 	color: #fff;
 }
-article + article:hover p {
-	color: #111;
-	font-weight: 800;
-}
 p:first-child {
 	padding-top: 50px;
 }
@@ -188,8 +181,7 @@ p:first-child {
 #services ul,
 #skills ul {
 	padding-bottom: 40px;
-	padding-left: 38px;
-	width: 260px;
+	width: 75%;
 	margin: 0 auto;
 }
 #services li,
@@ -265,23 +257,9 @@ p:first-child {
 }
 /* Section Background Colors
 ============================ */
-header {
-	background: #fff;
-}
-#projects {
-	background: #eee;
-}
-
-#services {
-	background: #fff;
-}
-
+#projects,
 #skills {
 	background: #eee;
-}
-
-#connect {
-	background: #fff;
 }
 /* Footer Styles
 ================ */
@@ -292,7 +270,7 @@ footer {
 	color: #eee;
 }
 /* Media Queries
-================= 
+=================
 @media screen and (min-width: 500px) and (max-width: 815px) {
 	html,
 	body {
@@ -443,6 +421,76 @@ body {
 		clear: both;
 	}
 } */
+/* Small (phone) portrait and landscape orientation */
+@media screen and (min-width: 428px) {
+	header {
+		height: 50%;
+		min-height: 300px;
+	}
+	header,
+	nav ul {
+		text-align: center;
+	}
+	header h1,
+	header h2,
+	nav ul {
+		width: 90%;
+	}
+	
+	/* Navigation
+	============= */
+	nav ul {
+		margin: 30px auto 0 auto;
+	}
+	nav ul li {
+		display: inline-block;
+		background: none;
+		margin: 0;
+		padding: 0;
+	}
+	nav ul li+li {
+		margin-left: 2%;
+	}
+	nav ul li a {
+		color: #111;
+		font-weight: 500;
+	}
+	nav ul li a:hover {
+		border-bottom: 1px solid black;
+	}
+}
+@media screen and (min-width: 545px) {
+	header,
+	nav ul {
+		text-align: center;
+	}
+	header h1 {
+		font-size: 3em;
+	}
+	header h2 {
+		font-size: 1.5em;
+	}
+	nav ul li a {
+		font-size: 1.125em;
+	}
+}
+@media screen and (min-width: 872px) {
+	header {
+		height: 55%;
+	}
+	header h1 {
+		font-size: 4em;
+	}
+	nav ul li a:hover {
+		border-bottom: 2px solid black;
+	}
+	nav ul li+li {
+		margin-left: 4%;
+	}
+	
+}
+
+
 
 
 
